<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/PD_row1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/PD_Cons1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/PE_Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/caption_pd"
                        android:textAlignment="inherit"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                        android:textSize="14sp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/PD_row2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/PD_Cons2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/dash_line"
                    android:padding="10dp"
                    app:layout_constraintTop_toTopOf="@+id/PD_Cons1">

                    <TextView
                        android:id="@+id/PD_Title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:text="@string/title1_pd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/Title1_btn1_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title1_btn1_pd"
                        android:textAllCaps="false"
                        android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Title1" />

                    <TextView
                        android:id="@+id/textPath_PD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/title1_path_pd"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Title1_btn1_PD" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/title1_divider_pd"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textPath_PD" />

                    <EditText
                        android:id="@+id/editText_PD"
                        android:labelFor="@id/editText_PD"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/dash_line_small"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:inputType="textMultiLine"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="18sp"
                        android:typeface="normal"
                        android:hint="@string/hint_insertEncryptText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <Button
                        android:id="@+id/Title1_btn2_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title1_btn2_pd"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_PD" />

                    <Button
                        android:id="@+id/Title1_btn3_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title1_btn3_pe"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Title1_btn2_PD" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/PD_row3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/PD_Cons3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/dash_line"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/PD_Title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:text="@string/title2_pd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Cons3" />

                    <TextView
                        android:id="@+id/PD_Caption2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/caption2_pd"
                        android:textAlignment="inherit"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Title2" />

                    <Button
                        android:id="@+id/Title2_btn1_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title2_btn1_pd"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Caption2" />

                    <TextView
                        android:id="@+id/keyPath_PD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:gravity="center_horizontal"
                        android:text="@string/title2_path_pd"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Title2_btn1_PD" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/PD_row4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/PD_Cons4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/PD_Title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:text="@string/caption3_pd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Cons4" />

                    <Button
                        android:id="@+id/Title3_btn1_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title3_btn1_pd"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Title3" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/PD_row5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/PD_Cons5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/dash_line"
                    android:padding="10dp"
                    app:layout_constraintTop_toTopOf="@+id/PD_Cons4"
                    tools:layout_editor_absoluteX="20dp">

                    <TextView
                        android:id="@+id/PD_Title4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:text="@string/title4_pd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />


                    <EditText
                        android:id="@+id/editText_Result_PD"
                        android:labelFor="@+id/editText_Result_PD"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/dash_line_small"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:inputType="textMultiLine"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="18sp"
                        android:typeface="normal"
                        android:hint="@string/hint_decryptText"
                        android:longClickable="false"
                        android:focusable="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/PD_Title4" />

                    <Button
                        android:id="@+id/Title4_btn1_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title4_btn1_pd"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText_Result_PD" />

                    <Button
                        android:id="@+id/Title4_btn2_PD"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/title4_btn2_pd"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Title4_btn1_PD" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>